Prevent device wallpaper loss when rotating the device

This CL tried to fix the issue without changing anything else to avoid
regression. We could consider merging this to M63.

UpdateWallpaper() function will be refactored at a later time.

Bug: 782008
Change-Id: I8f60c8e3dc833233c9b725c036475089f2810511
Reviewed-on: https://chromium-review.googlesource.com/756180
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514920}
Former-commit-id: 37ebcfb0c42669055273c31dad7920ed11a258e1